@@ -7,6 +7,7 @@
 -- commented out pcre_free_study() - issue on mac
 -- more refactoring of tcp session - still incomplete
 -- patched cd_tcp.cc and packet_manager.cc for length underflow issue
+-- fix active.max_responses default, etc.
 
 121
 -- valgrind fixes
